package ar.utn.ba.dsi.fuenteEstatica.models.entities.hechos;

public enum Origen {
	ESTATICA
}
